# smartlocal-site

./: Index.html  README.md  pyproject.toml  style.css
